--- a/projects/style.css
+++ b/projects/style.css
@@ -1,5 +1,10 @@
+
 html{
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+}
+body{
+    padding:0px;
+    margin: 0px;
 }
 
 .center{
@@ -8,7 +13,7 @@ html{
 .page-header{
     background-color: #159957;
     background-image: linear-gradient(120deg, #155799, #159957);
-    padding: 20px;
+    padding: 1.5rem;
     text-align: center;
     color: white;
 }
@@ -21,20 +26,21 @@ html{
 .heading{
     color: #159957;
 }
-
 main{
-    padding: 64px 200px;
-    font-size: larger;
+    padding: 2rem 1rem 2rem 1rem;
+    font-size: 1.1rem;
     font-weight: 300;
-}
-figure{
-    padding: 30px;
 }
 
 figure,figcaption{
     color: #159915;
     text-align: center;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
+
 
 code{
     background-color: #1f2937;
