--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+  }
+  
+
 html{
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 }
